--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "react-ion-slider": "^1.0.17",
     "react-js-pagination": "^3.0.2",
     "react-meta-tags": "^1.0.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.31",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
